--- a/src/app/components/public/courses/courses.component.html
+++ b/src/app/components/public/courses/courses.component.html
@@ -25,17 +25,21 @@
       <h1 class="mb-5">Tous les catégories</h1>
     </div>
 
-    <div class="row g-3 align-items-center justify-content-center d-flex">
-      <div (click)="filter('all'); onclick($event)" class="box-cat">
-        <p class="category-name">Tous</p>
+    <div class="d-flex  justify-content-center">
+      <div class=" m-1">
+      <button (click)="filter('all'); onclick($event)" class="btn btn-sm btn-outline-primary categoryButton">
+        Tous
+      </button>
       </div>
-      <div
-        *ngFor="let category of categoriesList"
-        (click)="filter(category.name); onclick($event)"
-        class="box-cat"
+      <div class=" m-1" *ngFor="let category of categoriesList"
+      (click)="filter(category.name); onclick($event)">
+        <button
+        class="btn btn-sm btn-outline-primary categoryButton"
       >
-        <p class="category-name">{{ category.name }}</p>
+        {{ category.name }}
+    </button>
       </div>
+    
     </div>
   </div>
 </div>
