--- a/src/app/components/public/home/home.component.css
+++ b/src/app/components/public/home/home.component.css
@@ -17,7 +17,24 @@
   font-size: 14px;
 }
 
-.image-land {
-  object-fit: cover;
-  width: 100%;
+.hero{
+  background-image: url('../../../../assets/img/carousel-1.jpg');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  z-index: 2;
 }
+
+.hero::after{
+  content:"";
+  width:100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(21, 20, 51, 0.8);
+  z-index: -1;
+}
+
+
