--- a/src/app/components/private/shared/top-bar/top-bar.component.html
+++ b/src/app/components/private/shared/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <!-- TOPBAR -->
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg">
   <!-- Navbar Brand-->
-  <a class="navbar-brand ps-3" routerLink="/admin/dashboard"
+  <a class="navbar-brand ps-3" routerLink="/"
     ><img src="assets/img/5.png" alt="" />
   </a>
 
